# Medoc

./: .gitignore  AGENTS.md  LICENSE  README.md
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: error.rs  lib.rs  main.rs
app/src-tauri/src/application/: auth_service.rs  break_glass.rs  mod.rs  rbac.rs
app/src-tauri/src/commands/: akte_anlage_commands.rs  akte_commands.rs  akte_next_termin_commands.rs  akte_validation_commands.rs  app_kv_commands.rs  attest_commands.rs  audit_commands.rs  auth_commands.rs  bestellung_commands.rs  bilanz_snapshot_commands.rs  break_glass_commands.rs  devices_commands.rs  document_pdf_commands.rs  dokument_template_commands.rs  export_commands.rs  feedback_commands.rs  integration_commands.rs  invoice_commands.rs  invoice_sequence_commands.rs  leistung_commands.rs  list_params.rs  logging_commands.rs  menu_commands.rs  mod.rs  ops_commands.rs  patient_commands.rs  personal_commands.rs  praxis_commands.rs  produkt_commands.rs  rechnung_document_commands.rs  rezept_commands.rs  statistik_commands.rs  subscription_commands.rs  system_commands.rs  tagesabschluss_protokoll_commands.rs  termin_commands.rs  vertrag_commands.rs  zahlung_commands.rs
app/src-tauri/src/domain/: enums.rs
app/src-tauri/src/infrastructure/: app_menu.rs  backup.rs  crypto.rs  dsfa.rs  (+13 more)
app/src-tauri/tests/: audit_chain_tests.rs  brute_force_tests.rs  crypto_tests.rs  db_migrations_tests.rs  dicom_tests.rs  dsgvo_erasure_tests.rs  gdt_tests.rs  migration_import_tests.rs  payment_tests.rs  rbac_tests.rs  retention_tests.rs  zahlung_repo_tests.rs
(+397 files in other folders)
