[package]
name = "medoc"
version = "0.1.0"
description = "MeDoc - Zahnarztpraxis Management System"
authors = ["MeDoc Team"]
edition = "2021"

[lib]
name = "medoc_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# Logging & Observability (NFA-LOG)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry"] }
tracing-appender = "0.2"

# Security hardening (NFA-SEC)
argon2 = "0.5"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = "2"
base64 = "0.22"

# Log export
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
dirs = "5"
rfd = "0.15"

[dev-dependencies]
filetime = "0.2.27"
